# femwell

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Manifest.toml  Project.toml  README.md  README.rst  apt.txt  environment.yml  fem.py  fem_curl_2.py  mesh.py  mode_solver.py  mode_solver_2.py  package.json  pyproject.toml
.docker/: Dockerfile
.github/: dependabot.yml
.github/workflows/: book.yml  build.yml  cicd.yml  docker.yml  docs.yml  format.yml  release.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
book/: _config.yml  _toc.yml  intro.md
book/math/: thermal.md
book/photonics/: mode_solver.md
book/photonics/examples/: vary_width.py  waveguide_modes.py
docs/: Makefile  _config.yml  _toc.yml  contributing.md  contributors.md  execution_statistics.md  install.md  intro.md  introduction.md  myst.yml  references.bib
docs/_static/: custom.css
docs/benchmarks/: mode_solver.py  mode_solver_rectangle.py
docs/contributors/: contributors.md
docs/electronics/examples/: capacitor.py  coax_cable.py  coplanar_waveguide.py  coplanar_waveguide_vary_gap.py  coplanar_waveguide_vary_width.py  inductor.py  microstrip_waveguide_vary_gap.py  microstrip_waveguide_vary_width.py
docs/fem/: fem_intro.md  meshing.md
docs/julia/: coplanar_waveguide.jl  fefd_2d.jl  fefd_3d.jl  fefd_3d.py  fresnel.jl  fresnel.py  heater_3d.jl  heater_3d.py  heater_3d_mesh.py  js.jl  lithium_niobate_phase_shifter.jl  microstrip.jl  photonic_cavity.jl  photonic_crystal.py  thermal_fill.jl  thermal_simple.jl  waveguide bent.jl  waveguide.jl  waveguide_anisotropic.jl  waveguide_bent.jl  waveguide_bent_coupling.jl  waveguide_overlap_integral.jl
docs/math/: coupled_mode_theory.md  dispersion.md  index.md  matplotlibrc  maxwell.md  maxwell_quantities.md  overlap_integrals.md  quasistatic.md  schroedinger.md  thermal.md  waveguide_port.md
docs/photonics/: culomb_solver.md  mode_solver.md  mode_solver_periodic.md  thermal_phase_shifter.md
docs/photonics/examples/: Makefile  SFWM_Aeff.py  SFWM_effective_area.py  bent_waveguide.py  bragg_filter.py  calculate_GVD.py  capacitor.py  coulomb.py  coupled_mode_theory.py  crosstalk.py  culomb.py  depletion_waveguide.py  detector.py  detector_perturbation_symmetry.py  effective_area.py  fiber_overlap.py  grating_coupler.py  leaky_mode.py  leaky_waveguide.py  metal_heater_phase_shifter.py  metal_heater_phase_shifter_transient.py  (+8 more)
docs/source/: conf.py  index.rst  install.rst  maxwell.rst  references.bib  thermal.rst
femwell/: __init__.py  coplanar_waveguide.py  coulomb.py  culomb.py  eme.py  eme.py.bak  fefd.py  fefd_2d.py  fiber.py  laplace.py  magnetostatic.py  mesh.py  mode_solver.py  mode_solver_1d.py  mode_solver_2d_periodic.py  mode_solver_2d_periodic_quadratic.py  mode_solver_inplane.py  mode_solver_schrodinger.py  pn_analytical.py  si_heater.py  solver.py  tcad.py  thermal.py  thermal.rst  thermal_transient.py  utils.py  vary_width.py  visualization.py  waveguide.py
femwell/examples/: Aeff.py  coplanar_waveguide.py  coupled_mode_theory.py  fiber_overlap.py  overlap_integrals.py  si_heater.py
femwell/maxwell/: waveguide.py
femwell/mesh/: __init__.py  mesh.py  meshtracker.py  slice.py
femwell/tests/: test_Aeff_mode.py  test_mesh.py
src/: Femwell.jl
src/Maxwell/: Maxwell.jl
src/Thermal/: Thermal.jl
waveguidemodes/: coplanar_waveguide.py  mesh.py  mode_solver.py  si_heater.py  thermal.py  thermal_transient.py  vary_width.py  waveguide.py
waveguidemodes/tests/: test_mesh.py
(+31 files in other folders)
